Dont handle ctrl-click if there is selection

BUG: 475175